@@ -48,7 +48,7 @@ public class PhenotypingColonyReportPhenotypingServiceImpl implements Phenotypin
                 .entrySet()
                 .stream()
                 .filter(e -> e.getValue().size() == 1)
-                .collect(Collectors.toMap(Map.Entry::getKey, e -> List.copyOf(e.getValue()).get(0)));
+                .collect(Collectors.toMap(Map.Entry::getKey, e -> List.copyOf(e.getValue()).getFirst()));
     }
 
     @Override
@@ -69,7 +69,7 @@ public class PhenotypingColonyReportPhenotypingServiceImpl implements Phenotypin
                 .entrySet()
                 .stream()
                 .filter(e -> e.getValue().size() == 1)
-                .collect(Collectors.toMap(map -> map.getKey(), map -> List.copyOf(map.getValue()).get(0)));
+                .collect(Collectors.toMap(Map.Entry::getKey, map -> List.copyOf(map.getValue()).getFirst()));
     }
 
     @Override
@@ -80,15 +80,14 @@ public class PhenotypingColonyReportPhenotypingServiceImpl implements Phenotypin
 
     private List<Long> getFilteredMutationIds() {
         return filteredOutcomeMutationMap
-                    .entrySet()
+                    .values()
                     .stream()
-                    .map(e -> e.getValue().getMutationId())
+                    .map(PhenotypingColonyReportOutcomeMutationProjection::getMutationId)
                     .collect(Collectors.toList());
     }
 
 
     private List<Long> getOutcomeIds() {
-        List<Long> outcomeIds = pap.stream().map(x -> x.getOutcomeId()).collect(Collectors.toList());
-        return outcomeIds;
+        return pap.stream().map(PhenotypingColonyReportPhenotypingAttemptProjection::getOutcomeId).collect(Collectors.toList());
     }
 }
