@@ -135,7 +135,7 @@ class PlanControllerTest extends ControllerTestTemplate
         List<HistoryDTO> historyDTOS = changeResponse.getHistoryDTOs();
         assertThat(historyDTOS.size(), is(1));
 
-        HistoryDTO historyDTO = historyDTOS.get(0);
+        HistoryDTO historyDTO = historyDTOS.getFirst();
         assertThat(historyDTO.getComment(), is("Plan updated"));
 
         List<HistoryDetailDTO> historyDetailDTOS = historyDTO.getDetails();
@@ -179,7 +179,7 @@ class PlanControllerTest extends ControllerTestTemplate
         List<HistoryDTO> historyDTOS = changeResponse.getHistoryDTOs();
         assertThat(historyDTOS.size(), is(1));
 
-        HistoryDTO historyDTO = historyDTOS.get(0);
+        HistoryDTO historyDTO = historyDTOS.getFirst();
         assertThat(historyDTO.getComment(), is("Plan updated"));
 
         List<HistoryDetailDTO> historyDetailDTOS = historyDTO.getDetails();
@@ -339,7 +339,7 @@ class PlanControllerTest extends ControllerTestTemplate
         List<HistoryDTO> historyDTOS = changeResponse.getHistoryDTOs();
         assertThat(historyDTOS.size(), is(1));
 
-        HistoryDTO historyDTO = historyDTOS.get(0);
+        HistoryDTO historyDTO = historyDTOS.getFirst();
         assertThat(historyDTO.getComment(), is("Plan updated"));
 
         List<HistoryDetailDTO> historyDetailDTOS = historyDTO.getDetails();
@@ -517,7 +517,7 @@ class PlanControllerTest extends ControllerTestTemplate
         List<HistoryDTO> historyDTOS = changeResponse.getHistoryDTOs();
         assertThat(historyDTOS.size(), is(1));
 
-        HistoryDTO historyDTO = historyDTOS.get(0);
+        HistoryDTO historyDTO = historyDTOS.getFirst();
         assertThat(historyDTO.getComment(), is("Plan updated"));
 
         List<HistoryDetailDTO> historyDetailDTOS = historyDTO.getDetails();
@@ -581,7 +581,7 @@ class PlanControllerTest extends ControllerTestTemplate
         List<HistoryDTO> historyDTOS = changeResponse.getHistoryDTOs();
         assertThat(historyDTOS.size(), is(1));
 
-        HistoryDTO historyDTO = historyDTOS.get(0);
+        HistoryDTO historyDTO = historyDTOS.getFirst();
         assertThat(historyDTO.getComment(), is("Plan updated"));
 
         List<HistoryDetailDTO> historyDetailDTOS = historyDTO.getDetails();
@@ -635,7 +635,7 @@ class PlanControllerTest extends ControllerTestTemplate
         List<HistoryDTO> historyDTOS = changeResponse.getHistoryDTOs();
         assertThat(historyDTOS.size(), is(1));
 
-        HistoryDTO historyDTO = historyDTOS.get(0);
+        HistoryDTO historyDTO = historyDTOS.getFirst();
         assertThat(historyDTO.getComment(), is("Plan updated"));
 
         List<HistoryDetailDTO> historyDetailDTOS = historyDTO.getDetails();
